<resources>
    <string name="app_name">ZoomIntoBooks</string>
    <string name="ScanButton">Scan barcode</string>
    <string name="SearchButton">Select book manually</string>
    <string name="welcome">Welcome</string>
    <string name="dots">dots</string>
    <string name="info">info</string>
    <string name="contact">Contact</string>
    <string name="book">book</string>
    <string name="settings">Settings</string>
    <string name="barcodeScan">Fit the barcode\nwithin the border</string>
    <string name="search">Search</string>
    <string name="returntoprev">return</string>
    <string name="about_us">About us</string>
    <string name="about_the_book">About the book</string>
    <string name="try_again">Try again</string>
    <string name="continue_text">Continue</string>
    <string name="error_scanning">Error Scanning</string>
    <string name="book_not_in_database">Book not in database</string>
    <string name="not_your_book">Not your book?</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="data_usage_header">Data usage</string>
    <string name="theme_header">Theme</string>

    <!-- Data Usage Preferences -->
    <string name="auto_download_title">Automatically download media</string>
    <string name="auto_download_summary">Save images to your device</string>

    <string name="quality_title">Image quality</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Use dark mode</string>
</resources>